Corrección fecha - versión entregada

--- a/latex/Tarea1.tex
+++ b/latex/Tarea1.tex
@@ -37,7 +37,7 @@
             $\#$ de cuenta: $315164482$ \\
             Tania Michelle Rubí Rojas
             $\#$ de cuenta: $315121719$}
-        \date{18 de febrero del 2019}
+        \date{23 de agosto del 2019}
 
     \begin{document}
     \maketitle
